--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
             <nav>
                 <div class="nav-links">
                     <ul>
-                        <li><a href="/home">HOME</a></li>
-                        <li><a href="/about">ABOUT</a></li>
-                        <li><a href="/contact">CONTACT</a></li>
-                        <li><a href="/history">HISTORY</a></li>
-                        <li><a href="/login">LOGIN</a></li>
+                        <li><a href="/home.html">HOME</a></li>
+                        <li><a href="/about.html">ABOUT</a></li>
+                        <li><a href="/contact.html">CONTACT</a></li>
+                        <li><a href="/history.html">HISTORY</a></li>
+                        <li><a href="/login.html">LOGIN</a></li>
                     </ul>
                 </div>
             </nav>
