--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
     <html>
     <head>
-        <title>VVK Vocabulary Builder</title>
+        <title> Vocabulary Builder</title>
         <link rel="stylesheet" href="./index.css">
     </head>
     <body>
