--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <div class="nav-links">
                     <ul>
                         <li><a href="/home.html">HOME</a></li>
-                        <li><a href="/about.html">ABOUT</a></li>
+                        <li><a href="about.html">ABOUT</a></li>
                         <li><a href="/contact.html">CONTACT</a></li>
                         <li><a href="/history.html">HISTORY</a></li>
                         <li><a href="/login.html">LOGIN</a></li>
