--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-            <h1 style="font-size: 2.5vw;"><img src="https://t3.ftcdn.net/jpg/05/18/33/00/360_F_518330056_V4Mk7ueJ8fg5zhYURkAPkUb2nVawesu8.jpg" width="60" height="45" style="float: left; width: 5vw; height: 3vh;">Vocabulary Builder</h1>
+            <h1 style="font-size: 2.5vw;"><img src="https://t3.ftcdn.net/jpg/05/18/33/00/360_F_518330056_V4Mk7ueJ8fg5zhYURkAPkUb2nVawesu8.jpg" width="60" height="45" style="float: left; width: 5vw; height: 3vh;">VVK Vocabulary Builder</h1>
             <nav>
                 <div class="nav-links">
                     <ul>
