--- a/output.html
+++ b/output.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <style>
+        body{
+            background-color: #223447;
+        }
+    </style>
 </head>
 <body>
-    <h1 id="yoyo">hi</h1>
+    <h1 id="yoyo" style="color:antiquewhite">hi</h1>
     <script src="./output.js"></script>
 </body>
 </html>
