--- a/login.html
+++ b/login.html
@@ -59,13 +59,6 @@
       <button>Submit</button>
     </div>
   </div>
-  <script>
-    let x1 = document.getElementsByTagName("button")[0];
-    x1.onclick = ()=>{
-      let t = document.getElementsByTagName("input")[0].value;
-      let url = "index.html?value="+encodeURIComponent(t);
-      window.location.href = url;
-    }
-  </script>
+  <script src="./login.js"></script>
 </body>
 </html>
