--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                         <li><a href="about.html">ABOUT</a></li>
                         <li><a href="contact.html">CONTACT</a></li>
                         <li><a href="history.html">HISTORY</a></li>
-                        <li><a href="login.html">LOGIN</a></li>
+                        <li><a id="login" href="login.html">LOGIN</a></li>
                     </ul>
                 </div>
             </nav>
