--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
     <html>
     <head>
-        <title> VVK Vocabulary Builder</title>
+        <title>VVK Vocabulary Builder</title>
         <link rel="stylesheet" href="./index.css">
     </head>
     <body>
@@ -10,7 +10,7 @@
             <nav>
                 <div class="nav-links">
                     <ul>
-                        <li><a href="home.html">HOME</a></li>
+                        <li><a href="#">HOME</a></li>
                         <li><a href="about.html">ABOUT</a></li>
                         <li><a href="contact.html">CONTACT</a></li>
                         <li><a href="history.html">HISTORY</a></li>
